# pcd_nricp

./: CMakeLists.txt  NonRigidICP.h  README.md  deformation_transfer.cpp  main.cpp  mytimer.h  test.cpp
data/: boundry.txt  eye_socket.txt  landmarks_meaning.txt  nsh_landmarks_index.txt  pytorch3d.xf  pytorch3d_lm_idx.txt  source_landmarks_index.txt  target_landmarks_index.txt
result/: Corr.txt
